[package]
name = "vc4-drm-emu"
version = "0.1.0"
authors = ["Cirrus <cirrus.neptune@protonmail.com>"]
edition = "2021"

[workspace]
members = ["shader_transpiler", "hook"]

[dependencies]
wgpu = { version = "22.1.0", features = ["naga-ir"] }
winit = { version = "0.30.5", features = ["rwh_06"], default-features = false }
libc = "0.2.158"
nix = "0.29.0"
drm-sys = "0.7.0"
env_logger = "0.11.5"
vc4-drm-emu-shader-transpiler = { path = "shader_transpiler" }
once_cell = "1.18.0"
objc = "0.2.7"
metal = "0.29.0"
block = "0.1.6"
pretty_env_logger = "0.5.0"
num-traits = "0.2.19"
num-derive = "0.4.2"
