[package]
name = "vc4-drm-emu-hook"
version = "0.1.0"
authors = ["Cirrus <cirrus.neptune@protonmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
libc = "0.2.148"
cstr = "0.2.11"
vc4-drm-emu = { path = ".." }
errno = "0.3.7"
async-ffi = "0.5.0"
bytemuck = "1.14.0"

[dependencies.nix]
version = "0.29.0"
features = ["ioctl", "fs"]
default-features = false

[build-dependencies]
cc = "1.0"
